--- a/pom.xml
+++ b/pom.xml
@@ -23,44 +23,37 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.6.0</version>
-
                 <executions>
                     <execution>
                         <phase>package</phase>
                         <goals>
                             <goal>shade</goal>
                         </goals>
-
                         <configuration>
                             <finalName>${project.name}-${project.version}</finalName>
-
-                            <shadedArtifactAttached>false</shadedArtifactAttached>
-                            <useDependencyReducedPomInJar>true</useDependencyReducedPomInJar>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <minimizeJar>true</minimizeJar>
-
                             <relocations>
                             </relocations>
-
                             <filters>
                                 <filter>
                                     <artifact>*:*</artifact>
-
                                     <excludes>
                                         <exclude>META-INF/**</exclude>
-                                        <exclude>LICENSE</exclude>
-                                        <exclude>LICENSE.**</exclude>
+                                        <exclude>LICENSE*</exclude>
                                     </excludes>
                                 </filter>
-
                             </filters>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
