--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>tc.arcadia</groupId>
     <artifactId>TimedWings</artifactId>
-    <version>1.0</version>
+    <version>0.1.1-beta</version>
     <packaging>jar</packaging>
 
     <name>TimedWings</name>
